page route error rectified

--- a/article.html
+++ b/article.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
         <title>The Western Music</title>
     </head>
     <body>
         <nav class="container navbar">
             <h1 class="navbar-brand ml-md-4">The Western Music</h1>
             <ul class="nav">
-                <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="/">
+                <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="index.html">
                      Home 
                 </a></li>
-                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href="/#contentSection">
+                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href="index.html#contentSection">
                      Read Book 
                 </a></li>
             </ul>
@@ -24,10 +24,10 @@
                 <div id="title" class="display-4 sectiontitle mb-5 ml-sm-4 pl-sm-4 pl-2"></div>
             </div>
         </main>
-        <script type="text/javascript" src="../js/main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
         <script>readContents();</script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
       </body>
 </html>
