--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="container navbar">
             <h1 class="navbar-brand ml-md-4">The Western Music</h1>
             <ul class="nav">
-                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href="/">
+                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href="">
                      Home 
                 </a></li>
                 <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="#contentSection">
