Split contents to Chapters and subtopics

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         </nav>
         <main>
             <div class="container-fluid py-sm-3 mb-5 text-center">
-                <h1 class="display-2 txt-glow py-sm-5 mx-auto my-3 my-sm-5">Discover the<br/>Real Music</h1>
-                <div class="py-1 py-sm-5"><a href="#contentSection">
-                    <svg width="62" height="81" viewBox="0 0 62 81" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <h1 class="display-2 txt-glow py-sm-4 mx-auto my-3 my-sm-5">Discover the<br/>Real Music</h1>
+                <div class="py-1"><a href="#contentSection" class="btn btn-outline-light btn-lg">
+                    Get Started
+                </a></div>
+                <div class="py-3 py-sm-5"><a href="#contentSection">
+                    <svg width="52" height="71" viewBox="0 0 62 81" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M28.1147 38.0906L30 40.4786L30.5698 40.0288L31.1395 40.4786L33.0248 38.0906L33.1395 38L33.1179 37.9726L61.1395 2.47858L58 0L30.5698 34.745L3.13953 0L0 2.47858L28.0216 37.9726L28 38L28.1147 38.0906Z" fill="white"/>
                         <path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd" d="M28.1147 58.0906L30 60.4786L30.5698 60.0288L31.1395 60.4786L33.0248 58.0906L33.1395 58L33.1179 57.9726L61.1395 22.4786L58 20L30.5698 54.745L3.13953 20L0 22.4786L28.0216 57.9726L28 58L28.1147 58.0906Z" fill="white"/>
                         <path opacity="0.1" fill-rule="evenodd" clip-rule="evenodd" d="M28.1147 78.0906L30 80.4786L30.5698 80.0288L31.1395 80.4786L33.0248 78.0906L33.1395 78L33.1179 77.9726L61.1395 42.4786L58 40L30.5698 74.745L3.13953 40L0 42.4786L28.0216 77.9726L28 78L28.1147 78.0906Z" fill="white"/>
@@ -53,7 +56,7 @@
             <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
         </footer>
         <script type="text/javascript" src="js/main.js"></script>
-        <script>readContents();</script>
+        <script>main();</script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
