--- a/article.html
+++ b/article.html
@@ -24,6 +24,8 @@
                 <div id="title" class="display-4 sectiontitle mb-5 ml-sm-4 pl-sm-4 pl-2"></div>
             </div>
         </main>
+        <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/article.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script>main();</script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
