--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <footer>
             <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
         </footer>
+        <script type="text/javascript" src="js/utils.js"></script>
+        <script type="text/javascript" src="js/home.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script>main();</script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
