configured article page structure

--- a/article.html
+++ b/article.html
@@ -22,6 +22,7 @@
         <main>
             <div id="contentSection" class="container-fluid py-3 mb-5">
                 <div id="title" class="display-4 sectiontitle mb-5 ml-sm-4 pl-sm-4 pl-2"></div>
+                <div id="contentBody" class="container"></div>
             </div>
         </main>
         <script type="text/javascript" src="js/utils.js"></script>
