added sub title content and navigation

--- a/pages/Baroque Period.html
+++ b/pages/Baroque Period.html
@@ -22,7 +22,7 @@
     established opera as a musical genre. Many musical terms and
     concepts from this era are still being used in the current world.</p>
 <p>(first topic under the subtopic)</p>
-<h3>Johann Sebastian Bach</h3>
+<a id="Johann Sebastian Bach"></a><h3>Johann Sebastian Bach</h3>
 <p>(photo and signature of bach)</p>
 <p>Johann
     Sebastian Bach, born on the 1st of March 1685 (died on 28 July 1750)
@@ -51,7 +51,7 @@
     music in the first half of the 19th century. He is now regarded as
     the supreme composer of the Baroque, and as one of the greatest of
     all time.</p>
-<h3>George Frideric Handel</h3>
+<a id="George Frideric Handel"></a><h3>George Frideric Handel</h3>
 <p>(photo signature)</p>
 <p>George
     Frideric Handel (23 February 1685 – 14 April 1759) was a
@@ -88,7 +88,7 @@
 <p>Handel’s
     works have been catalogued and are commonly referred to by a HWV
     number. For example, Handel’s Messiah is also known as HWV 56.</p>
-<h3>Domenico Scarlatti</h3>
+<a id="Domenico Scarlatti"></a><h3>Domenico Scarlatti</h3>
 <p>(p and s)</p>
 <p>Giuseppe
     Domenico Scarlatti (October 26, 1685 – July 23, 1757) was an Italian
@@ -113,7 +113,7 @@
     Frédéric Chopin, Johannes Brahms, Béla Bartók, Dmitri Shostakovich,
     Heinrich Schenker, Vladimir Horowitz and Marc- André Hamelin. The
     Russian school of pianism has particularly championed the sonatas.</p>
-<h3>Antonio lucio Vivaldi</h3>
+<a id="Antonio lucio Vivaldi"></a><h3>Antonio lucio Vivaldi</h3>
 <p>(p and s)</p>
 <p>Antonio
     Lucio Vivaldi (4 March 1678 – 28 July 1741), nicknamed il Prete
