--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>The Western Music</title>
     </head>
     <body>
@@ -53,7 +53,9 @@
             </div>
         </main>
         <footer>
+            <hr color="grey" width="40%"/>
             <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
+            <hr color="grey" width="40%"/>
         </footer>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/home.js"></script>
