contents chenge to json, next & prev btns added

--- a/article.html
+++ b/article.html
@@ -20,9 +20,21 @@
             </ul>
         </nav>
         <main>
+            <div class="container">
+                <div class="row justify-content-between mt-2">
+                    <a class="btn btn-lg btn-nav" href="#"><< Previous</a>
+                    <a class="btn btn-lg btn-nav" href="#">Next >></a>
+                </div>
+            </div>
             <div id="contentSection" class="container-fluid py-3 mb-5">
                 <div id="title" class="display-4 sectiontitle mb-5 ml-sm-4 pl-sm-4 pl-2"></div>
-                <div id="contentBody" class="container"></div>
+                <div id="contentBody" class="container px-0"></div>
+            </div>
+            <div class="container">
+                <div class="row justify-content-between mt-2">
+                    <a class="btn btn-lg btn-nav" href="#"><< Previous</a>
+                    <a class="btn btn-lg btn-nav" href="#">Next >></a>
+                </div>
             </div>
         </main>
         <footer>
@@ -30,6 +42,7 @@
             <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
             <hr color="grey" width="40%"/>
         </footer>
+        <script type="text/javascript" src="data/contents.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/article.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
