--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div id="contentSection" class="container-fluid py-3 mb-5">
                 <div class="sectiontitle h1 mb-5 ml-sm-4 pl-sm-4 pl-2">The Contents</div>
-                <div id="contents" class="container accordion">
+                <div id="contents" class="container accordion px-0">
                     <div class="card black-glow">
                         <div class="card-header shadow-sm bg-light" id="headingOne">
                             <a class="btn btn-lg btn-link" href="" data-toggle="collapse" data-target="#collapser" aria-expanded="true" aria-controls="collapser">
@@ -57,6 +57,7 @@
             <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
             <hr color="grey" width="40%"/>
         </footer>
+        <script type="text/javascript" src="data/contents.js"></script>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/home.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
@@ -64,5 +65,5 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-      </body>
+    </body>
 </html>
