--- a/article.html
+++ b/article.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <title>The Western Music</title>
     </head>
     <body>
         <nav class="container navbar">
-            <h1 class="navbar-brand ml-md-4">The Western Music</h1>
+            <a href="index.html" class="navbar-brand ml-md-4 d-flex align-items-center">
+                <img height="30" src="assets/logoWesternMusic.png"/>
+                <strong class="ml-2">The Western Music</strong>
+            </a>
             <ul class="nav">
                 <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="index.html">
                      Home 
