--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <title>The Western Music</title>
     </head>
     <body>
         <nav class="container navbar">
-            <h1 class="navbar-brand ml-md-4">The Western Music</h1>
+            <a href class="navbar-brand ml-md-4 d-flex align-items-center">
+                <img height="30" src="assets/logoWesternMusic.png"/>
+                <strong class="ml-2">The Western Music</strong>
+            </a>
             <ul class="nav">
-                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href="">
+                <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href>
                      Home 
                 </a></li>
                 <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="#contentSection">
@@ -54,7 +58,7 @@
         </main>
         <footer>
             <hr color="grey" width="40%"/>
-            <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
+            <div class="my-1 text-center" style="font-size: 0.9rem;">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
             <hr color="grey" width="40%"/>
         </footer>
         <script type="text/javascript" src="data/contents.js"></script>
