--- a/article.html
+++ b/article.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="og:title" content="The Western Music">
+        <meta name="og:type" content="website">
+        <meta name="og:url" content="https://kavienanj.github.io/wstrn-music-site/">
+        <meta name="og:image" content="https://kavienanj.github.io/wstrn-music-site/assets/logoWesternMusic.png">
+        <meta name="og:description" content="This is an application created by the Computer Society and the Western Music Society of Royal College to promote western music culture within students">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
