--- a/pages/Baroque Period.html
+++ b/pages/Baroque Period.html
@@ -25,7 +25,7 @@
     concepts from this era are still being used in the current world.
 </p>
 <a id="Johann Sebastian Bach"></a><h3>Johann Sebastian Bach</h3>
-<p>(photo and signature of bach)</p>
+<img src="/assets/media/image-5.jpg"><img src="/assets/media/image-4.png">
 <p>
     Johann Sebastian Bach, born on the 1st of March 1685 (died on 28 July 1750)
     was a German composer and organist whose ecclesiastical and secular
@@ -57,7 +57,7 @@
     all time.
 </p>
 <a id="George Frideric Handel"></a><h3>George Frideric Handel</h3>
-<p>(photo signature)</p>
+<img src="/assets/media/image-3.jpg"><img src="/assets/media/image-2.png">
 <p>
     George Frideric Handel (23 February 1685 – 14 April 1759) was a
     German-English Baroque composer, who is famous for his operas,
@@ -98,7 +98,7 @@
     number. For example, Handel’s Messiah is also known as HWV 56.
 </p>
 <a id="Domenico Scarlatti"></a><h3>Domenico Scarlatti</h3>
-<p>(p and s)</p>
+<img src="/assets/media/image-1.jpg">
 <p>
     Giuseppe Domenico Scarlatti (October 26, 1685 – July 23, 1757) was an Italian
     composer who spent much of his life in the service of the Portuguese
@@ -126,7 +126,7 @@
     Russian school of pianism has particularly championed the sonatas.
 </p>
 <a id="Antonio lucio Vivaldi"></a><h3>Antonio lucio Vivaldi</h3>
-<p>(p and s)</p>
+<img src="/assets/media/image-5.jpg"><img src="/assets/media/image-4.png">
 <p>
     Antonio Lucio Vivaldi (4 March 1678 – 28 July 1741), nicknamed il Prete
     Rosso (“The Red Priest”) because of his red hair, was an Italian
