added musical instrument media

--- a/article.html
+++ b/article.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="og:title" content="The Western Music">
         <meta name="og:type" content="website">
-        <meta name="og:url" content="https://kavienanj.github.io/wstrn-music-site/">
-        <meta name="og:image" content="https://kavienanj.github.io/wstrn-music-site/assets/logoWesternMusic.png">
+        <meta name="og:url" content="https://developers-rccs.github.io/wstrn-music-site/">
+        <meta name="og:image" content="https://developers-rccs.github.io/wstrn-music-site/assets/logoWesternMusic.png">
         <meta name="og:description" content="This is an application created by the Computer Society and the Western Music Society of Royal College to promote western music culture within students">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="assets/favicon.png"/>
@@ -16,7 +16,7 @@
     <body>
         <nav class="container navbar">
             <a href="index.html" class="navbar-brand ml-md-4 d-flex align-items-center">
-                <img height="30" src="assets/logoWesternMusic.png"/>
+                <img style="margin: 0;" height="30" src="assets/logoWesternMusic.png"/>
                 <strong class="ml-2">The Western Music</strong>
             </a>
             <ul class="nav">
