--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <nav class="container navbar">
             <a href class="navbar-brand ml-md-4 d-flex align-items-center">
-                <img height="30" src="assets/logoWesternMusic.png"/>
+                <img style="margin: 0;" height="30" src="assets/logoWesternMusic.png"/>
                 <strong class="ml-2">The Western Music</strong>
             </a>
             <ul class="nav">
