--- a/pages/Woodwind Instruments.html
+++ b/pages/Woodwind Instruments.html
@@ -1,53 +1,48 @@
-<p>(photo)</p>
 <p>The three branches of the woodwind family have different sources of sound. Vibrations begin when air is blown across
     the top of an instrument, across a single reed, or across two reeds. Reeds are small pieces of cane. A single reed
     is clamped to a mouthpiece at the top of the instrument and vibrates against the mouthpiece when air is blown
     between the reed and the mouthpiece. Two reeds tied together are commonly known as a double reed. This double reed
     fits into a tube at the top of the instrument and vibrates when air is forced between the two reeds.</p>
-<p>(photo)</p>
 <a id="Piccolo"></a>
 <h3>Piccolo</h3>
 <p>The piccolo is exactly like the flute except that it is much smaller and is usually made of silver or wood. The pitch
     of the piccolo is higher</p>
 <p>than that of a flute. It is played an octave higher than the written notes.</p>
-<p>(photo)</p>
+<img src="/assets/media/image-55.jpg">
 <a id="Flute"></a>
 <h3>Flute</h3>
 <p>Originally made of wood, the flute is now made from silver or gold and is about 2 feet in length. It looks like a
     narrow tube with a row of holes covered by keys along one side. The player blows air across the small hole in the
     mouthpiece to produce a sound that can be either soft and mellow or high and piercing. Non transposing instrument.
 </p>
-<p>(photo)</p>
+<img src="/assets/media/image-53.jpg">
 <a id="Oboe"></a>
 <h3>Oboe</h3>
 <p>The oboe is similar to the clarinet in many ways. Both are made from wood and have metal keys that can produce many
     notes rapidly. Unlike the clarinet, the oboe does not have a mouthpiece, but has two reeds tied together. By placing
     them between one’s lips and blowing air through them, the reeds vibrate and produce a sound. All instruments are
     tuned to concert pitch ―A‖ of the oboe (440Hz). Non transposing instrument.</p>
-<p>(photo)</p>
+<img src="/assets/media/image-54.jpg">
 <a id="English Horn"></a>
 <h3>English Horn</h3>
 <p>The English horn (Cor – Anglais) is another double-reed instrument in the woodwind family. Although much like the
     oboe, it is larger than the oboe and its sound much lower. It is played on the 5th lower than the written notes.</p>
-<p>(photo)</p>
+<img src="/assets/media/image-52.jpg">
 <a id="Clarinet"></a>
 <h3>Clarinet</h3>
-<p>quickly.it</a> is played 1 tone lower than the written notes.</p>
-<p>(photo)</p>
+<p>It is played 1 tone lower than the written notes.</p>
+<img src="/assets/media/image-50.jpg">
 <a id="Bass Clarinet"></a>
 <h3>Bass Clarinet</h3>
 <p>The bass clarinet is a larger and lower sounding relative of the clarinet. Like the clarinet, the bass clarinet is a
     single-reed instrument and is made of wood.</p>
-<p>(photo)</p>
 <a id="Bassoon"></a>
 <h3>Bassoon</h3>
 <p>The bassoon (Fagotta) is a large double reed instrument with a lower sound than the other woodwind instruments. Its
     double reed is attached to a small curved tube called a bocal which fits into the bassoon. When the player blows air
     between the reeds, the vibrating column of air inside the instrument travels over nine feet to the bottom of the
     instrument, then up to the top where the sound comes out.</p>
-<p>(photo)</p>
 <a id="Contrabassoon"></a>
 <h3>Contrabassoon</h3>
 <p>The contrabassoon, also known as the double bassoon or double- bassoon, is a larger version of the bassoon, sounding
     an octave lower. Its technique is similar to its smaller cousin, with a few notable differences.</p>
-<p>(photo)</p>
