changed asset url

--- a/pages/Brass Instruments.html
+++ b/pages/Brass Instruments.html
@@ -8,23 +8,23 @@
 <p>The Trumpet is the highest sounding member of the brass family. The brilliant tone of the trumpet travels through
     about 6 - ½ feet of tubing bent into an oblong shape. The player presses the three valves in various combinations
     with the fingers of the right hand to obtain various pitches.</p>
-<img src="/assets/media/image-42.png">
+<img src="./assets/media/image-42.png">
 <a id="French Horn"></a><h3>French Horn</h3>
 <p>The horn or French horn consists of about 12 feet of narrow tubing wound into a circle. The player obtains different
     notes on the horn with a clear mellow sound by pressing valves with the left hand and by moving the right hand
     inside of the bell.</p>
-<img src="/assets/media/image-40.png">
+<img src="./assets/media/image-40.png">
 <a id="Trombone"></a><h3>Trombone</h3>
 <p>The mouthpiece of the Trombone is larger than that of a trumpet, and gives the instrument a more mellow sound.
     Instead of valves, the trombone has a slide which changes the length of its approximately 9 feet of tubing to reach
     different pitches. The Trombone can play a complete chromatic scale.</p>
-<img src="/assets/media/image-41.png">
+<img src="./assets/media/image-41.png">
 <a id="Cornet"></a><h3>Cornet</h3>
 <p>The cornet is a brass instrument very similar to the trumpet, distinguished by its conical bore, compact shape, and
     mellower tone quality. The most common cornet is a transposing instrument in B♭. It is not related to the
     renaissance and early baroque cornett or cornetto.</p>
-<img src="/assets/media/image-39.png">
+<img src="./assets/media/image-39.png">
 <a id="Tuba"></a><h3>Tuba</h3>
 <p>Made of about 16 feet of tubing, the Tuba is the lowest sounding member of the brass family. The tuba has four to
     five valves and is held upright in the player’s lap.</p>
-<img src="/assets/media/image-43.png">
+<img src="./assets/media/image-43.png">
