fixed image url error

--- a/pages/Classical Period.html
+++ b/pages/Classical Period.html
@@ -18,7 +18,7 @@
     van Beethoven all worked at some time in Vienna, and Franz Schubert were born there.
 </p>
 <a id="Wolfgang Amadeus Mozart"></a><h3>Wolfgang Amadeus Mozart</h3>
-<img src="./assets/media/image-9.jpg"><img src="./assets/media/image-8.png">
+<img src="assets/media/image-9.jpg"><img src="assets/media/image-8.png">
 <p>
     Wolfgang Amadeus Mozart, full baptismal name
     Johannes Chrysostomus Wolfgangus Theophilus Mozart (27 January 1756 – 5 December 1791), was a prolific and
@@ -43,7 +43,7 @@
     in C minor, K. 491, the Symphony No. 40 in G minor, K.550, and the opera Don Giovanni.
 </p>
 <a id="Ludwig van Beethoven"></a><h3>Ludwig van Beethoven</h3>
-<img src="./assets/media/image-7.jpg">
+<img src="assets/media/image-7.jpg">
 <p>
     Ludwig van Beethoven (17 December 1770 – 26 March
     1827) was a German composer and pianist. He was a crucial figure in the transitional period between the
@@ -80,7 +80,7 @@
     Solemnis, the last five string quartets (including the massive Große Fuge) and the last five piano sonatas.
 </p>
 <a id="Franz Joseph Haydn"></a><h3>Franz Joseph Haydn</h3>
-<img src="./assets/media/image-6.jpg">
+<img src="assets/media/image-6.jpg">
 <p>
     Franz Joseph Haydn (31 March 1732 – 31 May 1809),
     known as Joseph Haydn was an Austrian composer, one of the most prolific and prominent composers of the
