--- a/pages/Modern Period.html
+++ b/pages/Modern Period.html
@@ -6,7 +6,7 @@
     labeled with this term, explores music in many styles not always related to it.</p>
 <a id="George Gershwin"></a>
 <h3>George Gershwin</h3>
-<img src="./assets/media/image-18.jpg">
+<img src="assets/media/image-18.jpg">
 <p>George Gershwin (September 26, 1898 – July 11, 1937) was an American composer and pianist. Gershwin’s compositions
     spanned both popular and classical genres, and his most popular melodies are universally familiar.</p>
 <p>He wrote most of his vocal and theatrical works, including more than a dozen Broadway shows, in collaboration with
@@ -20,7 +20,7 @@
     Paris.</p>
 <a id="Sergei Prokofiev"></a>
 <h3>Sergei Prokofiev</h3>
-<img src="./assets/media/image-21.jpg">
+<img src="assets/media/image-21.jpg">
 <p>Sergei Sergeyevich Prokofiev (27 April 1891 – 5 March 1953) was a Russiancomposer, pianist and conductor who mastered
     numerous musical genres and came to be admired as one of the greatest composers of the 20th century.</p>
 <p>Prokofiev was a soloist with the London Symphony Orchestra, conducted by Piero Coppola, in the first recording of his
@@ -32,7 +32,7 @@
     Violin Concerto with David Oistrakh as soloist; Everest Records later released this recording on an LP.</p>
 <a id="Béla Bartók"></a>
 <h3>Béla Bartók</h3>
-<img src="./assets/media/image-15.png">
+<img src="assets/media/image-15.png">
 <p>Béla Viktor János Bartók (March 25, 1881 – September 26, 1945) was a Hungariancomposer and pianist. He is considered
     to be one of the greatest composers of the 20th century and is regarded, along with Liszt, as his country’s greatest
     composer (Gillies 2001). Through his collection and analytical study of folk music, he was one of the founders of
@@ -46,7 +46,7 @@
     (Botstein, 6).</p>
 <a id="Igor Stravinsky"></a>
 <h3>Igor Stravinsky</h3>
-<img src="./assets/media/image-20.jpg"><img src="./assets/media/image-19.png">
+<img src="assets/media/image-20.jpg"><img src="assets/media/image-19.png">
 <p>Igor Fyodorovich Stravinsky (17 June 1882 – 6 April 1971) was a Russiancomposer, pianist, and conductor, widely
     acknowledged as one of the most important and influential composers of 20th century music. He was a quintessentially
     cosmopolitan Russian who was named by Time magazine as one of the 100 most influential people of the century. In
@@ -73,7 +73,7 @@
     in 1947 as Poetics of Music).</p>
 <a id="Benjamin Britten"></a>
 <h3>Benjamin Britten</h3>
-<img src="./assets/media/image-17.jpg"><img src="./assets/media/image-16.png">
+<img src="assets/media/image-17.jpg"><img src="assets/media/image-16.png">
 <p>Edward Benjamin Britten, Baron Britten, OMCH (22 November 1913 – 4 December 1976) was an Englishcomposer, conductor,
     violist and pianist. Britten was an accomplished pianist, frequently performing chamber music and accompanying
     lieder and song recitals. However, apart from the Holiday Diary (1934), Piano Concerto (1938), Young Apollo (1939),
