--- a/pages/Percussion Instruments.html
+++ b/pages/Percussion Instruments.html
@@ -12,14 +12,14 @@
     with felt- tipped wooden sticks, or mallets, timpani produce a specific pitch that is determined by the drum’s size.
     That pitch is fine-tuned by tightening the drumhead with keys and foot pedals. Most orchestras use three or four
     timpani of varying sizes.</p>
-<img src="./assets/media/image-64.jpg">
+<img src="assets/media/image-64.jpg">
 <a id="Bass Drum"></a>
 <h3>Bass Drum</h3>
 <p>The composer Mozart added the deep, booming, un- tuned sound of the bass drum to the orchestra in 1782. Constructed
     like a snare drum, but without snares, the bass drum is much larger and is played on its side, so that either head
     may be struck. The beater or mallet for a bass drum is large with a soft material such as sheep’s wool covering the
     end.</p>
-<img src="./assets/media/image-56.jpg">
+<img src="assets/media/image-56.jpg">
 <a id="Snare Drum"></a>
 <h3>Snare Drum</h3>
 <p>The snare drum joined the orchestra nearly 200 years ago. It has two calfskin or plastic drumheads stretched tightly
@@ -27,13 +27,13 @@
     head or snare-head has catgut or metal wires called snares stretched tightly across it. When this un-tuned drum is
     struck on the top head, the snares produce a characteristic sharp rattling sound as they vibrate against the bottom
     head.</p>
-<img src="./assets/media/image-62.png">
+<img src="assets/media/image-62.png">
 <a id="Glockenspiel"></a>
 <h3>Glockenspiel</h3>
 <p>Also called orchestra bells, the glockenspiel resembles a small xylophone, but it is made of steel bars. The
     glockenspiel is typically played with wooden or plastic mallets, producing a high tuned sound that is bright and
     penetrating. The name glockenspiel comes from the German language and means “to play the bells.”</p>
-<img src="./assets/media/image-60.jpg">
+<img src="assets/media/image-60.jpg">
 <a id="Tubular Bells"></a>
 <h3>Tubular Bells</h3>
 <p>Tubular Bells (also Known as chimes) are musical instruments in the percussion family. Each bell is a metal tube,
@@ -42,7 +42,7 @@
     smaller and usually less expensive</p>
 <p>instrument. Studio chimes are similar in appearance to tubular bells, but each bell has a smaller diameter than the
     corresponding bell on tubular bells.</p>
-<img src="./assets/media/image-66.png">
+<img src="assets/media/image-66.png">
 <a id="Xylophone"></a>
 <h3>Xylophone</h3>
 <p>The xylophone (from the Greek words ξύλον — xylon, “wood” + υωνή —phonē, “Sound, voice”, meaning “wooden sound”) is a
@@ -52,7 +52,7 @@
     used generally, to include all such instruments, such as the marimba and balafon or, more specifically, to refer to
     an orchestral instrument of somewhat higher pitch range than the chromatic marimba. It is sometimes mistakenly used
     of similar lithophones and metallophone instruments of the glockenspiel type such as the pixiphone.</p>
-<img src="./assets/media/image-67.jpg">
+<img src="assets/media/image-67.jpg">
 <a id="Hammered Dulcimer"></a>
 <h3>Hammered Dulcimer</h3>
 <p>The hammered dulcimer is a stringed musical instrument with the strings stretched over a trapezoidal sounding board.
@@ -68,7 +68,7 @@
     resonators. On four or five octave models one pedal is usually available to sustain or dampen the sound. The
     three-octave instruments do not have a pedal because of their small “table-top” design. One of the best-known works
     that makes use of the celesta is Tchaikovsky’s “Dance of the Sugar Plum Fairy” from The Nutcracker.</p>
-<img src="./assets/media/image-58.jpg">
+<img src="assets/media/image-58.jpg">
 <a id="Zither"></a>
 <h3>Zither</h3>
 <p>The zither is a musical string instrument, most commonly found in Slovenia, Austria, Hungary, northwestern Croatia,
@@ -85,7 +85,7 @@
     frame, often of wood or plastic, with pairs of small metal jingles, called “zils”. Classically the term tambourine
     denotes an instrument with a drumhead, though some variants may not have a head at all. Tambourines are often used
     with regular percussion sets. They can be mounted, but position is largely down to preference.</p>
-<img src="./assets/media/Image-63.png">
+<img src="assets/media/Image-63.png">
 <a id="Castanets"></a>
 <h3>Castanets</h3>
 <p>Castanets are a percussion instrument (idiophone), used in Moorish, Ottoman, ancient Roman, Italian, Spanish,
@@ -93,13 +93,13 @@
     string. They are held in the hand and used to produce clicks for rhythmic accents or a ripping or rattling sound
     consisting of a rapid series of clicks. They are traditionally made of hardwood, although fibreglass is becoming
     increasingly popular.</p>
-<img src="./assets/media/image-57.jpg">
+<img src="assets/media/image-57.jpg">
 <a id="Triangle"></a>
 <h3>Triangle</h3>
 <p>The triangle is an idiophone type of musical instrument in the percussion family. It is a bar of metal, usually steel
     but sometimes other metals like beryllium copper, bent into a triangle shape. The instrument is usually held by a
     loop of some form of thread or wire at the top curve. It was first made around the 16th century.</p>
-<img src="./assets/media/image-65.png">
+<img src="assets/media/image-65.png">
 <a id="Woodblock"></a>
 <h3>Woodblock</h3>
 <p>A woodblock is essentially a small piece of slit drum made from a single piece of wood and used as a percussion
@@ -118,7 +118,7 @@
     although small disc-shaped cymbals based on ancient designs sound a definite note (see: crotales). Cymbals are used
     in many ensembles ranging from the orchestra, percussion ensembles, jazz bands, heavy metal bands, and marching
     groups. Drum kits usually incorporate a crash, ride or crash ride, and a pair of hi-hat cymbals.</p>
-<img src="./assets/media/image-59.png">
+<img src="assets/media/image-59.png">
 <a id="Gong"></a>
 <h3>Gong</h3>
 <p>A gong (Malay: gong) is an East and South East Asian musical percussion instrument that takes the form of a flat
@@ -127,7 +127,7 @@
     nipple gongs have a raised centre boss and are often suspended and played horizontally. Bowl gongs are bowl- shaped,
     and rest on cushions and belong more to bells than gongs. Gongs are made mainly from bronze or brass but there are
     many other alloys in use.</p>
-<img src="./assets/media/image-61.jpg">
+<img src="assets/media/image-61.jpg">
 <a id="Definite pitch"></a>
 <h4>Definite pitch</h4>
 <p>Percussion instruments in this group are sometimes referred to as “pitched” or "tuned”.</p>
