--- a/pages/String Instruments.html
+++ b/pages/String Instruments.html
@@ -1,5 +1,5 @@
 <a id="String Instruments"></a><h2>String Instruments</h2>
-<img src="./assets/media/image-46.png">
+<img src="assets/media/image-46.png">
 <p>The four major instruments in the string family, the violin, the viola, the cello and the double bass, are built the
     same way. The instruments are made of many pieces of wood which are glued - never nailed - together. The body of the
     instrument is hollow, thus becoming a resonating box for the sound. Four strings (sometimes five on the double-bass)
@@ -10,24 +10,24 @@
 <p>• The Violin is the soprano voice in the string family. It is held under the chin, resting on the shoulder. The
     violin has a very lovely tone that can be soft and expressive or exciting and brilliant. It is also known as the
     ―Cinderella‖ of the orchestra. Its strings are tuned to G, D, A, and E.</p>
-<img src="./assets/media/image-48.png">
+<img src="assets/media/image-48.png">
 <a id="Viola"></a><h4>Viola</h4>
 <p>• The Viola is the alto voice in the string family. Like the violin, it is held under the chin, resting on the
     shoulder. </p>
 <p>Unlike the violin, the viola is slightly larger and is tuned five notes lower. It has a darker and warmer tone
     quality than the violin, but is not as brilliant. Its strings are tuned to C, G, D and A.</p>
-<img src="./assets/media/image-47.png">
+<img src="assets/media/image-47.png">
 <a id="Violoncello"></a><h4>Violoncello</h4>
 <p>• The Violoncello or Cello is the tenor voice in the string family. While shaped like a violin, the cello is much
     larger and is held between the player’s knees. Because it can produce beautiful sounds from its lowest to its
     highest notes, it is a popular instrument. Its strings are tuned to C, G, D and A in the bass clef.</p>
-<img src="./assets/media/image-44.png">
+<img src="assets/media/image-44.png">
 <a id="Double Bass"></a><h4>Double Bass</h4>
 <p>• The Double Bass or string bass is the largest and lowest instrument of the string family. The double bass has
     rounded shoulders instead of square shoulders like the other string instruments. Because of its size, the player
     stands or sits on a high </p>
 <p>stool to play it. It is a transposing instrument. Its strings are tuned to E, A, D and G.</p>
-<img src="./assets/media/image-45.png">
+<img src="assets/media/image-45.png">
 <a id="Plucked String Instruments"></a><h3>Plucked String Instruments</h3>
 <a id="Banjo"></a><h4>Banjo</h4>
 <p>• The banjo is a four or five stringed instrument with a piece of plastic or animal skin stretched over a circular
