--- a/pages/Woodwind Instruments.html
+++ b/pages/Woodwind Instruments.html
@@ -8,30 +8,30 @@
 <p>The piccolo is exactly like the flute except that it is much smaller and is usually made of silver or wood. The pitch
     of the piccolo is higher</p>
 <p>than that of a flute. It is played an octave higher than the written notes.</p>
-<img src="./assets/media/image-55.jpg">
+<img src="assets/media/image-55.jpg">
 <a id="Flute"></a>
 <h3>Flute</h3>
 <p>Originally made of wood, the flute is now made from silver or gold and is about 2 feet in length. It looks like a
     narrow tube with a row of holes covered by keys along one side. The player blows air across the small hole in the
     mouthpiece to produce a sound that can be either soft and mellow or high and piercing. Non transposing instrument.
 </p>
-<img src="./assets/media/image-53.jpg">
+<img src="assets/media/image-53.jpg">
 <a id="Oboe"></a>
 <h3>Oboe</h3>
 <p>The oboe is similar to the clarinet in many ways. Both are made from wood and have metal keys that can produce many
     notes rapidly. Unlike the clarinet, the oboe does not have a mouthpiece, but has two reeds tied together. By placing
     them between one’s lips and blowing air through them, the reeds vibrate and produce a sound. All instruments are
     tuned to concert pitch ―A‖ of the oboe (440Hz). Non transposing instrument.</p>
-<img src="./assets/media/image-54.jpg">
+<img src="assets/media/image-54.jpg">
 <a id="English Horn"></a>
 <h3>English Horn</h3>
 <p>The English horn (Cor – Anglais) is another double-reed instrument in the woodwind family. Although much like the
     oboe, it is larger than the oboe and its sound much lower. It is played on the 5th lower than the written notes.</p>
-<img src="./assets/media/image-52.jpg">
+<img src="assets/media/image-52.jpg">
 <a id="Clarinet"></a>
 <h3>Clarinet</h3>
 <p>It is played 1 tone lower than the written notes.</p>
-<img src="./assets/media/image-50.jpg">
+<img src="assets/media/image-50.jpg">
 <a id="Bass Clarinet"></a>
 <h3>Bass Clarinet</h3>
 <p>The bass clarinet is a larger and lower sounding relative of the clarinet. Like the clarinet, the bass clarinet is a
